# Bloom-App

./: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cursor.rs  lib.rs  library.rs  session.rs  system.rs  tray.rs  types.rs  util.rs  video.rs
src-tauri/src/__tests__/: util_tests.rs  video_tests.rs
src/components/: BatchOptimizeModal.tsx  OptimizeModal.tsx  TanStackRoot.tsx  TrimModal.tsx
src/components/layout/: NavBar.test.tsx  NavBar.tsx  PageScrollArea.tsx  Sidebar.tsx  TitleBar.tsx
src/components/mac/: MacUIKit.tsx
src/components/record/: AudioMeterBar.tsx  LiveDrawOverlay.tsx  MonitorPicker.tsx  PipOverlay.tsx  PreviewFaultPanel.tsx
src/components/settings/: PresetEditor.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  (+6 more)
src/hooks/: useBloomBackend.test.ts  useBloomBackend.ts  useCloseOnEscape.ts  useMediaDevices.ts  useScrollToTop.ts  useSettings.tsx  useToast.tsx
src/lib/: annotateWindow.ts  annotation.ts  audioMeter.ts  capture.test.ts  capture.ts  cursorOverlay.ts  hotkeys.ts  monitorHighlight.ts  pacer.ts  presets.ts  previewDiagnostics.ts  recordingHud.ts  themes.ts  utils.test.ts  utils.ts  videoOptions.ts  windowControl.ts
src/pages/: AnnotationPage.tsx  CursorOverlayPage.tsx  LibraryPage.tsx  MonitorHighlightPage.tsx  RecordPage.tsx  RecordingHudPage.tsx  SettingsPage.tsx
src/types/: index.ts
(+7 files in other folders)
