[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri           = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
device_query    = "4.0"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
libc            = "0.2"          # disk-space via statvfs / GetDiskFreeSpaceEx
uuid            = { version = "1", features = ["v4"] }  # recording IDs
